--- a/projetfinal1029rachidazaoug-16-02-2022/package.json
+++ b/projetfinal1029rachidazaoug-16-02-2022/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0-alpha.34",
+    "@vuelidate/validators": "^2.0.0-alpha.26",
     "vue": "^3.2.29",
     "vue-router": "^4.0.12"
   },
